fixed sticky footer on tablet

--- a/app/assets/stylesheets/layout/_tablet.scss
+++ b/app/assets/stylesheets/layout/_tablet.scss
@@ -1,7 +1,4 @@
 @media only screen and (min-width:768px) and (max-width:1139px) {
-  body {
-    height: auto;
-  }
   h4 {
     font-size: 22px;
   }
